# glyphx-monorepo

./: .dockerignore  .gitignore  .graphqlconfig.yml  .lvimrc  .npmrc  .prettierignore  .prettierrc  1  App.jsx  Cargo.toml  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  glyphx.code-workspace.json  keys.csv  next.config.js  output.js  output.txt  package-lock.json  package.json  plopfile.ts  pnpm-lock.yaml  pnpm-workspace.yaml  sidebar.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  turbo.json  version-check.sh
bindings/node/bindings_node_common/: Cargo.toml
bindings/node/bindings_node_common/src/: lib.rs  neon_converter.rs
bindings/node/glyph_engine_node/: Cargo.toml  README.md  package.json  web_build.sh
bindings/node/glyph_engine_node/src/: lib.rs
bindings/node/offline_data_ingestion_node/: Cargo.toml  README.md  package.json  web_build.sh
bindings/node/offline_data_ingestion_node/src/: lib.rs
crates/common/: .vimspector.json  Cargo.toml
crates/common/src/: athena_connection.rs  lib.rs  s3_connection.rs  types.rs
crates/common/src/errors/: heartbeat_errors.rs  mod.rs
crates/common/src/types/: athena_connection_errors.rs  s3_connection_errors.rs
crates/common/src/util/: heartbeat.rs  mod.rs
crates/common/tests/: athena_connection.rs  heartbeat.rs  s3_connection.rs
crates/core/: .vimspector.json  Cargo.toml  Readme.md
crates/core/src/: aws.rs  error.rs  lib.rs  logging.rs  traits.rs  types.rs  utility_functions.rs
crates/core/src/aws/: athena_manager.rs  athena_stream_iterator.rs  result_set_converter.rs  s3_manager.rs  secret_manager.rs  types.rs  upload_stream.rs
crates/core/src/aws/athena_manager/: athena_manager_constructor_options.rs  athena_manager_ops_impl.rs  mod.rs
crates/core/src/aws/athena_stream_iterator/: mod.rs  test_objects.rs
crates/core/src/error/: invalid_argument_error.rs  invalid_operation_error.rs  unexpected_error.rs
crates/core/src/logging/: logging_error.rs
crates/core/src/traits/: athena_manager_ops.rs  block_storage_manager.rs  database.rs  error_type_parser.rs  mod.rs  s3_manager_ops.rs  secret_bound.rs  singleton.rs  upload_stream.rs  upload_stream_ops.rs
crates/core/src/types/: aws.rs  common.rs  error.rs
crates/core/src/utility_functions/: file_functions.rs  json_functions.rs  mod.rs
crates/core/tests/aws/: main.rs
crates/core/tests/aws2/: main.rs
crates/cube_model/: .vimspector.json  Cargo.toml  index.html
crates/cube_model/meshes/: cone.blend  cone.mtl  cube.blend  cylinder.blend
crates/cube_model/src/: application.rs  assets.rs  camera.rs  lib.rs  main.rs  model.rs  model_event.rs
crates/cube_model/src/assets/: axis_line.rs  color.rs  cone.rs  cube.rs  cylinder.rs  glyph.rs  interpolation.rs  rectangular_prism.rs  shape_vertex.rs
crates/cube_model/src/camera/: camera_controller.rs  orbit_camera.rs  uniform_buffer.rs
crates/cube_model/src/data/: mod.rs
crates/cube_model/src/light/: light_uniform.rs
crates/cube_model/src/model/: color_table_uniform.rs  mod.rs  model_configuration.rs  pipeline.rs  state.rs
crates/cube_model/src/model_event/: add_glyphs.rs  mod.rs  model_move_direction.rs
crates/database/: .vimspector.json  Cargo.toml
crates/database/src/: lib.rs  mongo_db_connection.rs  sync_mongo_db_connection.rs
crates/database/src/errors/: all_ids_exist_error.rs  delete_document_error.rs  find_one_error.rs  id_exists_error.rs  insert_document_error.rs  mod.rs  mongodb_connection_construction_error.rs  mongodb_initialization_error.rs  query_documents_error.rs  update_document_error.rs
crates/database/src/models/: mod.rs
crates/database/src/traits/: database_operations.rs  enum_data_model_field.rs  glyphx_data_model.rs  mod.rs
crates/database/tests/: mongodb_connection.rs  process_tracking_model.rs  sync_mongodb_connection.rs
crates/error/: Cargo.toml
crates/error/src/: error_type_parser.rs  lib.rs
crates/glyph_engine/: .vimspector.json  Cargo.toml
crates/glyph_engine/src/: lib.rs  singleton.rs  types.rs
crates/glyph_engine/src/errors/: glyph_engine_init_error.rs  glyph_engine_process_error.rs  mod.rs
crates/glyph_engine/src/macros/: handle_error.rs  pass_error.rs
crates/glyph_engine/src/types/: field_definition_type.rs  field_type.rs  glyph.rs  mod.rs  stats.rs  vectorizer_parameters.rs
crates/glyph_engine/src/vector_processer/: errors.rs  mod.rs  task_status.rs  vector.rs  vector_origional_value.rs
crates/glyph_engine/tests/: main.rs
crates/glyph_engine/tests/glyph_engine_test/: main.rs
crates/glyph_engine/tests/process_glyphs/: mod.rs
crates/glyph_engine/tests/vector_processor/: mod.rs
crates/macro_tests/: Cargo.toml
crates/macro_tests/src/: glyphx_error.rs  lib.rs  secret_bound_singleton.rs
crates/macro_tests/tests/: secret_bound_singleton.rs
crates/macros/: Cargo.toml
crates/macros/glyphx_data_model/: .vimspector.json  Cargo.toml
crates/macros/glyphx_data_model/src/: lib.rs
crates/macros/glyphx_error/: Cargo.toml
crates/macros/glyphx_error/src/: lib.rs
crates/macros/secret_bound_singleton/: .vimspector.json  Cargo.toml
crates/macros/secret_bound_singleton/src/: lib.rs  valid_data_types.rs
crates/macros/src/: lib.rs  main.rs  secret_bound.rs  secret_bound_singleton.rs  singleton.rs
crates/model_common/: Cargo.toml
crates/model_common/src/: lib.rs  stats.rs
crates/model_common/src/camera/: camera_manager.rs
crates/model_common/src/vectors/: mod.rs  vector.rs  vector_origional_value.rs
crates/model_common/src/wgpu/: wgpu_manager.rs
crates/models/cube_model/: .vimspector.json  Cargo.toml  README.md  index.html  web_build.sh
crates/models/cube_model/meshes/: charm.blend  chsrm.blend  cube.blend
crates/models/cube_model/src/: application.rs  lib.rs  main.rs
crates/secret_bound_singleton/: Cargo.toml
crates/secret_bound_singleton/src/: lib.rs  valid_data_types.rs
crates/types/: Cargo.toml
crates/types/src/: aws.rs  common.rs  error.rs  lib.rs
crates/types/src/aws/: athena_manager.rs  s3_manager.rs
crates/types/src/common/: athena_connection_errors.rs  s3_connection_errors.rs
email/: 1.html  (+9 more)
(+1932 files in other folders)
