[workspace]
members = ["crates/common", "crates/core", "crates/cube_model", "crates/database", "crates/error",  "crates/glyph_engine", "crates/macro_tests", "crates/macros/*", "crates/model_common", "bindings/node/*" ]
resolver = "2"

[profile.test]
features = ["test"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true

