[package]
name = "glyphx_common"
version = "0.1.0"
edition = "2021"

[lib]
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.68"
bson = "2.7.0"
cool_asserts = "2.0.3"
glyphx_core = { path = "../core", features = ["aws", "macros"] }
glyphx_database = { path = "../database" }
log = "0.4.17"
mockall = "0.11.4"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
