[package]
name = "glyphx_core"
version = "0.1.0"
edition = "2021"
 
[profile.test]
features = ["test"]

[lib]
test = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
async-trait = "0.1.68"
aws-config = "0.55.3"
aws-sdk-athena = "0.28.0"
aws-sdk-s3 = "0.28.0"
aws-smithy-http = "0.55.3"
aws-smithy-types = "0.55.3"
backtrace = "0.3.67"
bytes = "1.4.0"
chrono = "0.4.24"
glyphx_types = { path = "../types", features = ["aws"] }
http = "0.2.9"
json5 = "0.4.1"
log = "0.4.17"
log4rs = "1.2.0"
mockall = "0.11.4"
rand = "0.8.5"
reqwest = "0.11.18"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
serial_test = "2.0.0"
tokio = { version = "1", features = ["full"] }

[features]
default=["aws"]
test=["aws"]
aws=["s3_manager", "athena_manager"]
s3_manager=[]
athena_manager=[]
