[package]
name = "glyphx_core"
version = "0.1.0"
edition = "2021"


[lib]
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-recursion = "1.0.4"
async-trait = "0.1.68"
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-athena = { version = "1.41.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.46.0", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = { version = "1.43.0", features = ["behavior-version-latest"] }
aws-smithy-async = "1.2.1"
aws-smithy-http = "0.60.0"
aws-smithy-types = "1.2.2"
aws-smithy-runtime-api = "1.6.3"
backtrace = "0.3.67"
bytes = "1.4.0"
chrono = "0.4.24"
derive_builder = "0.20.1"
glyphx_core_error = {path = "../error"}
http = "0.2.9"
json5 = "0.4.1"
log = "0.4.17"
log4rs = "1.2.0"
mockall = "0.11.4"
rand = "0.8.5"
reqwest = "0.11.18"
secret_bound_singleton = { path = "../macros/secret_bound_singleton" }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
serial_test = "2.0.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"

[features]
default = ["aws", "macros"]
test = ["aws", "macros"]
aws = ["s3_manager", "athena_manager", "secret_manager"]
s3_manager = []
athena_manager = []
secret_manager = []
macros = ["secret_manager"]

