[package]
name = "glyph_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
test = true

[dependencies]
aws-smithy-async = "1.2.1"
aws-smithy-runtime-api = "1.6.3"
async-trait = "0.1.68"
bincode = "1.3.3"
bson = "2.11.0"
futures-core = "0.3"
glyphx_core = { path = "../core" }
glyphx_common = { path = "../common" }
glyphx_database = { path = "../database" }
http = "0.2.9"
im = "15.1.0"
lazy_static = "1.4.0"
log = "0.4.17"
mockall = "0.11.4"
model_common = { path = "../model_common" }
once_cell = "1.19.0"
rand = "0.8.5"
serde = "1.0.163"
serde_json = "1.0.107"
statrs = "0.16.0" 
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
