[package]
name = "macro_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
glyphx_core = { path = "../core", features = ["macros"] }
glyphx_types = { path = "../types"  }
serde_json = "1.0.96"

[features]
default = ["secret_bound_singleton", "glyphx_error"]
glyphx_error = []
secret_bound_singleton = []


