[package]
name = "model_common"
version = "0.1.0"
edition = "2021"

[lib]
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bincode = "1.3.3"
log = "0.4"
serde =  { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.107"
wgpu = "22.1.0"
winit = "0.30.5"
