[package]
name = "secret_bound_singleton_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
serde_json = "1.0.107"
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.69"
lazy_static = "1.4.0"

[dev-dependencies]
glyphx_core = { path = "../core" }
glyphx_types = { path = "../types" }
