[package]
name = "glyphx_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "0.28.0"
serde =  { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.96"


[features]
aws=["s3_manager","upload_stream"]
s3_manager=[]
upload_stream=[]
