[package]
name = "glyphx_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-athena = "0.33.0"
aws-sdk-s3 = "0.33.0"
serde =  { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.96"


[features]
default=["aws", "common"]
aws=["s3_manager", "upload_stream", "athena_manager", "secret_manager"]
s3_manager=[]
upload_stream=[]
athena_manager=[]
secret_manager=[]
s3_connection=["s3_manager"]
athena_connection=["athena_manager"]
common=["s3_connection", "athena_connection"]
