[package]
name = "bindings_node_common"
version = "0.1.0"
description = "Common elements for our node bindings"
authors = ["JP Burford"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glyphx_core = { path = "../../../crates/core", features = ["macros"] }
neon = {version="1.0.0", default-features = false, features = ["napi-6" ]}
serde_json = "1.0.111"
tokio = "1.35.1"
