[package]
name = "glyph_engine_node"
version = "0.1.0"
description = "Binds our glyph_engine crate to node using neon."
authors = ["JP Burford"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.8.1"
glyph_engine = { path = "../../../crates/glyph_engine" }
glyphx_common = { path = "../../../crates/common" }
glyphx_core = { path = "../../../crates/core", features = ["macros"] }
neon = {version="0.10.1", default-features = false, features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]}
once_cell = "1.19.0"
serde_json = "1.0.111"
tokio = "1.35.1"
