[package]
name = "offline_data_ingestion_node"
version = "0.1.0"
description = "Binds our offline_data_ingestion crate to node using neon."
authors = ["JP Burford"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.8.1"
offline_data_ingestion = { path = "../../../crates/services/offline_data_ingestion" }
neon = {version="1.0.0", default-features = false, features = ["napi-6" ]}
tokio = "1.35.1"
