[package]
name = "glyphx_cube_model"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true


[dependencies]
bincode = "1.3.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
cfg-if = "1"
cgmath = "0.18"
chrono = "0.4.38"
env_logger = "0.10"
glam = "0.24.1"
glyphx_core_error = { path = "../../error" }
im = "15.1.0"
log = "0.4"
model_common = { path = "../../model_common" }
nalgebra = "0.32.3"
num-traits = "0.2.16"
once_cell = "1.19.0"
ordered-float = "4.2.0"
pollster = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
smaa = "0.15.0"
statrs = "0.16.0" 
winit = "0.30.5"
wgpu = "22.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.43"
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "CustomEvent",
    "CustomEventInit",
]}
wgpu = { version = "22.1.0", features = ["webgl"]}
